fix(_base.scss): wrap the calculation in parenthesis

--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -475,7 +475,7 @@ flynt-component {
 }
 
 // Balance layouted text lines on mobile.
-@media (max-width: $breakpoint-tablet - 1) {
+@media (max-width: ($breakpoint-tablet - 1)) {
   [data-size="wide"],
   [data-size="full"],
   [data-text-align="center"] {
